# cargo-emerge

./: .gitignore  Cargo.toml  EXAMPLE.toml  README.md  check
src/: args.rs  cmd.rs  context.rs  error.rs  main.rs  manifest.rs  platform.rs  tpl.rs  utils.rs
src/linux/: archive.rs  mod.rs
src/macos/: dmg.rs  mod.rs
src/windows/: archive.rs  mod.rs
